Заменил кнопку,переключающую активность задачи, на чекбокс

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         border: 1px solid #000000;
         border-radius: 5px;
       }
+      .checkbox-wrapper {
+        display: flex;
+        align-items: center;
+      }
+      .checkbox-wrapper input {
+        margin-right: 5px;
+      }
       .active {
         background-color: #8aff7830;
       }
