Небольшие изменения в стилях

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>CodeSandbox Vue</title>
     <style>
       * {
+        margin: 0;
         padding: 0;
         box-sizing: border-box;
+      }
+      .container {
+        max-width: 1200px;
+        padding: 20px 5px;
       }
       button {
         padding: 3px;
@@ -36,7 +41,7 @@
       }
       .todo-item {
         margin-top: 5px;
-        width: 90%;
+        width: 100%;
         padding: 5px;
         display: flex;
         align-items: center;
@@ -58,7 +63,7 @@
         background-color: #ff787830;
       }
       .filter {
-        margin-top: 15px;
+        margin-top: 20px;
         display: inline-block;
         padding: 3px;
         border: 1px solid #000000;
