Удалил logo.png, отцентровал контент

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         box-sizing: border-box;
       }
       .container {
+        margin: 0 auto;
         max-width: 1200px;
         padding: 20px 5px;
       }
